--- a/wzor_10_2.html
+++ b/wzor_10_2.html
@@ -2028,165 +2028,163 @@
 
     <div style="text-align: justify;"></div>
     <div style="text-align: justify;"></div>
-    <div style="text-align: justify;"><a href="#_ftnref1" name="_ftn1"><span><span>[1]</span></span></a> Wzór umowy
+    <div style="text-align: justify;"><sup>1</sup> Wzór umowy
       stanowi minimalny zakres i może być uzupełniony o postanowienia niezbędne do realizacji w ramach danego konkursu,
       które nie są sprzeczne z zapisami zawartymi w tym wzorze.</div>
-    <div style="text-align: justify;"><a href="#_ftnref2" name="_ftn2"><span><span>[2]</span></span></a> Zgodnie ze
+    <div style="text-align: justify;"><sup>2</sup> Zgodnie ze
       wzorem
       przyjętym Uchwałą nr / /VI/2019 Zarządu Województwa Śląskiego z dnia 2019 r.</div>
-    <div style="text-align: justify;"><a href="#_ftnref3"
-        name="_ftn3"><span><em><span><strong>[3]</strong></span></em></span></a><em> Beneficjent rozumiany jest jako
+    <div style="text-align: justify;"><sup>3</sup><em> Beneficjent rozumiany jest jako
         Partner wiodący w przypadku realizowania projektu z Partnerem/ami wskazanymi we</em> wniosku.</div>
-    <div style="text-align: justify;"><a href="#_ftnref4" name="_ftn4"><span><span>[4]</span></span></a> Dotyczy
+    <div style="text-align: justify;"><sup>4</sup> Dotyczy
       projektów
       realizowanych w ramach partnerstwa. Wszelkie wynikające z umowy uprawnienia i zobowiązania Beneficjenta stosuje
       się
       odpowiednio do Partnerów.</div>
-    <div style="text-align: justify;"><a href="#_ftnref5" name="_ftn5"><span><span>[5]</span></span></a></div>
-    <div style="text-align: justify;"><a href="#_ftnref6" name="_ftn6"><span><span>[6]</span></span></a> Należy skreślić
+    <div style="text-align: justify;"><sup>5</sup></div>
+    <div style="text-align: justify;"><sup>6</sup> Należy skreślić
       wytyczne lit. a - p, które nie mają zastosowania w danym konkursie.</div>
-    <div style="text-align: justify;"><a href="#_ftnref7" name="_ftn7"><span><span>[7]</span></span></a> Wskaźniki
+    <div style="text-align: justify;"><sup>7</sup> Wskaźniki
       odnoszące się do efektów interwencji UP w kluczowych dla KE obszarach, w tym w szczególności w zakresie
       finansowania
       kosztów racjonalnych usprawnień dla osób z niepełnosprawnościami, dostosowania obiektów do potrzeb osób z
       niepełnosprawnościami, objęcia szkoleniami/doradztwem w zakresie kompetencji cyfrowych, wykorzystania technologii
       informacyjno-komunikacyjnych oraz wskaźniki wspólne dla wszystkich projektów współfinansowanych z EFS (wszystkie
       projekty realizowane w CT 8-11).</div>
-    <div style="text-align: justify;"><a href="#_ftnref8" name="_ftn8"><span><span>[8]</span></span></a> Skreślić jeśli
+    <div style="text-align: justify;"><sup>8</sup> Skreślić jeśli
       nie dotyczy.</div>
-    <div style="text-align: justify;"><a href="#_ftnref9" name="_ftn9"><span><span>[9]</span></span></a> Dotyczy
+    <div style="text-align: justify;"><sup>9</sup> Dotyczy
       Beneficjentów zobowiązanych do wniesienia wkładu własnego.</div>
-    <div style="text-align: justify;"><a href="#_ftnref10" name="_ftn10"><span><span>[10]</span></span></a> Zapis nie ma
+    <div style="text-align: justify;"><sup>10</sup> Zapis nie ma
       zastosowania w przypadku, gdy w regulaminie konkursu, na podstawie którego wybrano projekt do dofinansowania
       dopuszczono możliwość rozliczania wkładu własnego w kosztach pośrednich.</div>
-    <div style="text-align: justify;"><a href="#_ftnref11" name="_ftn11"><span><span>[11]</span></span></a> Dotyczy
+    <div style="text-align: justify;"><sup>11</sup> Dotyczy
       wskaźników produktu/rezultatu, których wartość docelowa zgodnie z regulaminem konkursu nie musiała zostać
       określona
       we wniosku o dofinansowanie.</div>
-    <div style="text-align: justify;"><a href="#_ftnref12" name="_ftn12"><span><span>[12]</span></span></a> Poprzez
+    <div style="text-align: justify;"><sup>12</sup> Poprzez
       aktualną treść Wytycznych rozumie się ostatnią wersję Wytycznych ogłoszoną w Monitorze Polskim.</div>
-    <div style="text-align: justify;"><a href="#_ftnref13" name="_ftn13"><span><span>[13]</span></span></a> Należy
+    <div style="text-align: justify;"><sup>13</sup> Należy
       wybrać
       odpowiednią treść (poprzez usunięcie reszty), zgodnie z zawartym oświadczeniem o kwalifikowaniu VAT/o częściowym
       kwalifikowaniu VAT/o niekwalifikowaniu VAT, znajdującym się w części G OŚWIADCZENIA BENEFICJENTA zatwierdzonego
       wniosku o dofinansowanie projektu o którym mowa w § 1 pkt 13.</div>
-    <div style="text-align: justify;"><a href="#_ftnref14" name="_ftn14"><span><span>[14]</span></span></a> Koszty
+    <div style="text-align: justify;"><sup>14</sup> Koszty
       pośrednie nie mają zastosowania w przypadku, gdy realizacja wszystkich zadań projektu zostanie zlecona innemu
       podmiotowi (wykonawcy). Rozliczenie kosztów pośrednich jest możliwe w przypadku samodzielnej realizacji projektu
       przez Beneficjenta lub jeżeli tylko niektóre kategorie kosztów w ramach projektu są objęte zamówieniami (co
       oznacza
       utrzymanie pełnej kontroli nad zarządzaniem projektem i nad jego realizacją).</div>
-    <div style="text-align: justify;"><a href="#_ftnref15" name="_ftn15"><span><span>[15]</span></span></a> Dotyczy
+    <div style="text-align: justify;"><sup>15</sup> Dotyczy
       projektów, w których występują stawki jednostkowe. Skreślić, jeśli nie dotyczy.</div>
-    <div style="text-align: justify;"><a href="#_ftnref16" name="_ftn16"><span><span>[16]</span></span></a> Wpisać
+    <div style="text-align: justify;"><sup>16</sup> Wpisać
       odpowiednie dokumenty.</div>
-    <div style="text-align: justify;"><a href="#_ftnref17" name="_ftn17"><span><span>[17]</span></span></a> Należy podać
+    <div style="text-align: justify;"><sup>17</sup> Należy podać
       nazwę jednostki – dane zgodne z zatwierdzonym wnioskiem o dofinansowanie. Skreślić, jeśli nie dotyczy.</div>
-    <div style="text-align: justify;"><a href="#_ftnref18" name="_ftn18"><span><span>[18]</span></span></a><sup>
-      </sup>Należy podać nazwę podmiotu/jednostki – dane zgodne z zatwierdzonym wnioskiem o dofinansowanie. Skreślić,
+    <div style="text-align: justify;"><sup>18</sup>
+      Należy podać nazwę podmiotu/jednostki – dane zgodne z zatwierdzonym wnioskiem o dofinansowanie. Skreślić,
       jeśli nie dotyczy.</div>
-    <div style="text-align: justify;"><a href="#_ftnref19" name="_ftn19"><span><span>[19]</span></span></a> Dotyczy
+    <div style="text-align: justify;"><sup>19</sup> Dotyczy
       projektów realizowanych w partnerstwie. Skreślić jeśli nie dotyczy.</div>
-    <div style="text-align: justify;"><a href="#_ftnref20" name="_ftn20"><span><span>[20]</span></span></a><sup>
-      </sup>Dotyczy projektów realizowanych w ramach partnerstwa.</div>
-    <div style="text-align: justify;"><a href="#_ftnref21" name="_ftn21"><span><span>[21]</span></span></a> Kwota
+    <div style="text-align: justify;"><sup>20</sup>Dotyczy projektów realizowanych w ramach partnerstwa.</div>
+    <div style="text-align: justify;"><sup>21</sup> Kwota
       refundacji, rozumiana jako nadwyżka rozliczenia wynikająca z zaangażowania środków własnych Beneficjenta ponad
       kwotę
       udzielonych zaliczek, która wypłacana jest zgodnie z § 11.</div>
-    <div style="text-align: justify;"><a href="#_ftnref22" name="_ftn22"><span><span>[22]</span></span></a> Zgodne z
+    <div style="text-align: justify;"><sup>22</sup> Zgodne z
       Rozporządzeniem Ministra Rozwoju i Finansów z dnia 7 grudnia 2017 r. w sprawie zaliczek w ramach programów
       finansowanych z udziałem środków europejskich (t.j. Dz.U. z 2017 roku poz. 2367).</div>
-    <div style="text-align: justify;"><a href="#_ftnref23" name="_ftn23"><span><span>[23]</span></span></a> Jeżeli
+    <div style="text-align: justify;"><sup>23</sup> Jeżeli
       aktualizacja harmonogramu płatności jest dokonywana łącznie z innymi zmianami w projekcie obowiązuje termin
       wskazany
       w § 33 ust. 1 umowy.</div>
-    <div style="text-align: justify;"><a href="#_ftnref24" name="_ftn24"><span><span>[24]</span></span></a> Przez
+    <div style="text-align: justify;"><sup>24</sup> Przez
       projekt
       ukończony/zrealizowany należy rozumieć projekt, dla którego przed dniem złożenia wniosku o dofinansowanie nastąpił
       odbiór ostatnich robót, dostaw lub usług przewidzianych do realizacji w jego zakresie rzeczowym.</div>
-    <div style="text-align: justify;"><a href="#_ftnref25" name="_ftn25"><span><span>[25]</span></span></a> Nie dotyczy,
+    <div style="text-align: justify;"><sup>25</sup> Nie dotyczy,
       gdy IZ w Regulaminie konkursu ograniczy możliwość kwalifikowania wydatków wstecz.</div>
-    <div style="text-align: justify;"><a href="#_ftnref26" name="_ftn26"><span><span>[26]</span></span></a> Należy podać
+    <div style="text-align: justify;"><sup>26</sup> Należy podać
       nazwę właściciela rachunku oraz numer rachunku płatniczym .</div>
-    <div style="text-align: justify;"><a href="#_ftnref27" name="_ftn27"><span><span>[27]</span></span></a> Dotyczy
+    <div style="text-align: justify;"><sup>27</sup> Dotyczy
       projektów, w ramach których transza jest przekazywana za pośrednictwem rachunku transferowego jednostki samorządu
       terytorialnego.</div>
-    <div style="text-align: justify;"><a href="#_ftnref28" name="_ftn28"><span><span>[28]</span></span></a> Partner
+    <div style="text-align: justify;"><sup>28</sup> Partner
       wiodący jest zobowiązany do poinformowania IZ o odsetkach narosłych na rachunku płatniczym Partnera oraz do ich
       zwrotu na rachunek IZ w terminach określonych w § 10 ust. 15.</div>
-    <div style="text-align: justify;"><a href="#_ftnref29" name="_ftn29"><span><span>[29]</span></span></a> Dotyczy
+    <div style="text-align: justify;"><sup>29</sup> Dotyczy
       jednostek sektora finansów publicznych.</div>
-    <div style="text-align: justify;"><a href="#_ftnref30" name="_ftn30"><span><span>[30]</span></span></a> Wniesienie
+    <div style="text-align: justify;"><sup>30</sup> Wniesienie
       zabezpieczenia nie jest wymagane, jeżeli Beneficjent jest jednostką sektora finansów publicznych.</div>
-    <div style="text-align: justify;"><a href="#_ftnref31" name="_ftn31"><span><span>[31]</span></span></a> Jeśli
+    <div style="text-align: justify;"><sup>31</sup> Jeśli
       dotyczy.
     </div>
-    <div style="text-align: justify;"><a href="#_ftnref32" name="_ftn32"><span><span>[32]</span></span></a> Za datę
+    <div style="text-align: justify;"><sup>32</sup> Za datę
       złożenia uznaje się datę wpływu wniosku o płatność poprzez platformę ePUAP/SEKAP.</div>
-    <div style="text-align: justify;"><a href="#_ftnref33" name="_ftn33"><span><span>[33]</span></span></a> Weryfikacji
+    <div style="text-align: justify;"><sup>33</sup> Weryfikacji
       podlegają jedynie wnioski o płatność złożone poprzez platformę ePUAP/SEKAP o tożsamej sumie kontrolnej co wnioski
       o
       płatność wygenerowane w systemie LSI. W przypadku, gdy ww. warunek nie został spełniony, uznaje się wniosek o
       płatność za niezłożony, tym samym nie podlega on weryfikacji.</div>
-    <div style="text-align: justify;"><a href="#_ftnref34" name="_ftn34"><span><span>[34]</span></span></a> Nie dotyczy
+    <div style="text-align: justify;"><sup>34</sup> Nie dotyczy
       wniosku końcowego o płatność.</div>
-    <div style="text-align: justify;"><a href="#_ftnref35" name="_ftn35"><span><span>[35]</span></span></a> Nie dotyczy
+    <div style="text-align: justify;"><sup>35</sup> Nie dotyczy
       wniosku końcowego o płatność.</div>
-    <div style="text-align: justify;"><a href="#_ftnref36" name="_ftn36"><span><span>[36]</span></span></a> IZ może
+    <div style="text-align: justify;"><sup>36</sup> IZ może
       dokonać uzupełnienia lub poprawienia wniosku o płatność w zakresie oczywistych omyłek, o czym informuje
       Beneficjenta.</div>
-    <div style="text-align: justify;"><a href="#_ftnref37" name="_ftn37"><span><span>[37]</span></span></a> Dotyczy
+    <div style="text-align: justify;"><sup>37</sup>> Dotyczy
       Beneficjentów zobowiązanych do wniesienia wkładu własnego.</div>
-    <div style="text-align: justify;"><a href="#_ftnref38" name="_ftn38"><span><span>[38]</span></span></a> Dotyczy
+    <div style="text-align: justify;"><sup>38</sup> Dotyczy
       jednostek sektora finansów publicznych.</div>
-    <div style="text-align: justify;"><a href="#_ftnref39" name="_ftn39"><span><span>[39]</span></span></a> Nie dotyczy
+    <div style="text-align: justify;"><sup>39</sup> Nie dotyczy
       Beneficjentów będących jednostkami sektora finansów publicznych. Skreślić, jeśli nie dotyczy</div>
-    <div style="text-align: justify;"><a href="#_ftnref40" name="_ftn40"><span><span>[40]</span></span></a> Projekty
+    <div style="text-align: justify;"><sup>40</sup> Projekty
       realizowane równolegle w czasie to projekty, których okres realizacji nakłada się na siebie.</div>
-    <div style="text-align: justify;"><a href="#_ftnref41" name="_ftn41"><span><span>[41]</span></span></a> Należy brać
+    <div style="text-align: justify;"><sup>41</sup> Należy brać
       pod uwagę dokument informujący o wynikach przeprowadzonej kontroli podpisany przez podmiot kontrolowany <br /> lub
       kontrolujący.</div>
-    <div style="text-align: justify;"><a href="#_ftnref42" name="_ftn42"><span><span>[42]</span></span></a> Dotyczy
+    <div style="text-align: justify;"><sup>42</sup> Dotyczy
       projektów realizowanych w partnerstwie.</div>
-    <div style="text-align: justify;"><a href="#_ftnref43" name="_ftn43"><span><span>[43]</span></span></a> Aktualny
+    <div style="text-align: justify;"><sup>43</sup> Aktualny
       adres
       siedziby Beneficjenta wskazywany jest w formularzu wniosku o dofinansowanie projektu oraz w formularzu wniosku o
       płatność.</div>
-    <div style="text-align: justify;"><a href="#_ftnref44" name="_ftn44"><span><span>[44]</span></span></a><sup>
-      </sup>Dotyczy projektów, w których będzie udzielana pomoc publiczna i/lub pomoc de minimis przez IZ i/lub
+    <div style="text-align: justify;"><sup>44</sup>Dotyczy projektów, w których będzie udzielana pomoc publiczna i/lub
+      pomoc de minimis przez IZ i/lub
       Beneficjenta/Partnera projektu. Jeżeli nie dotyczy, skreślić § 23-§ 25.</div>
-    <div style="text-align: justify;"><a href="#_ftnref45" name="_ftn45"><span><span>[45]</span></span></a> Dotyczy też
+    <div style="text-align: justify;"><sup>45</sup> Dotyczy też
       pomocy udzielanej w ramach projektu przez Beneficjenta/Partnera, zgodnie z wnioskiem o dofinansowanie.</div>
-    <div style="text-align: justify;"><a href="#_ftnref46" name="_ftn46"><span><span>[46]</span></span></a> Aktualny
+    <div style="text-align: justify;"><sup>46</sup> Aktualny
       numer
       referencyjny na dzień zawarcia umowy.</div>
-    <div style="text-align: justify;"><a href="#_ftnref47" name="_ftn47"><span><span>[47]</span></span></a> W przypadku
+    <div style="text-align: justify;"><sup>47</sup> W przypadku
       zmiany prowadzącej do zwiększenia wartości przyznanej Beneficjentowi pomocy de minimis w projekcie, Beneficjent
       jest
       zobowiązany do przedstawienia IZ informacji o aktualnej (na dzień udzielenia zwiększonej pomocy przez IZ),
       wysokości
       dotychczas udzielonej mu pomocy de minimis.</div>
-    <div style="text-align: justify;"><a href="#_ftnref48" name="_ftn48"><span><span>[48]</span></span></a> W przypadku
+    <div style="text-align: justify;"><sup>48</sup> W przypadku
       zgłoszenia wystąpienia zdarzenia, IZ zastrzega sobie możliwość weryfikacji czy zdarzenie jest siłą wyższą.</div>
-    <div style="text-align: justify;"><a href="#_ftnref49" name="_ftn49"><span><span>[49]</span></span></a> Jeśli
+    <div style="text-align: justify;"><sup>49</sup> Jeśli
       dotyczy.
     </div>
-    <div style="text-align: justify;"><a href="#_ftnref50" name="_ftn50"><span><span>[50]</span></span></a>
+    <div style="text-align: justify;"><sup>50</sup>
       Rozporządzenie
       Rady Ministrów z dnia 12 kwietnia 2012 r. w sprawie Krajowych Ram Interoperacyjności, minimalnych wymagań dla
       rejestrów publicznych i wymiany informacji w postaci elektronicznej oraz minimalnych wymagań dla systemów
       teleinformatycznych (t.j. <span>Dz.U. 2017 r. poz. 2247).</span></div>
-    <div style="text-align: justify;"><a href="#_ftnref51" name="_ftn51"><span><span>[51]</span></span></a> Utwory w
+    <div style="text-align: justify;"><sup>51</sup> Utwory w
       rozumieniu art. 1 ust. 2 ustawy o prawie autorskim i prawach pokrewnych (t.j. Dz.U 2018r. poz. 1191 z późn.zm.)
       składające się na rezultaty projektu bądź związane merytorycznie z określonym rezultatem.</div>
-    <div style="text-align: justify;"><a href="#_ftnref52" name="_ftn52"><span><span>[52]</span></span></a> Umowy
+    <div style="text-align: justify;"><sup>52</sup> Umowy
       zawierane pomiędzy Beneficjentem a wykonawcą lub Partnerem odpowiadają wymogom ustawy o prawie autorskim i prawach
       pokrewnych.</div>
-    <div style="text-align: justify;"><a href="#_ftnref53" name="_ftn53"><span><span>[53]</span></span></a> Dotyczy
+    <div style="text-align: justify;"><sup>53</sup> Dotyczy
       projektów, w których będzie udzielana pomoc publiczna i/lub pomoc de minimis.</div>
-    <div style="text-align: justify;"><a href="#_ftnref54" name="_ftn54"></a></div>
-    <div style="text-align: justify;"><a href="#_ftnref55" name="_ftn55"><span><span>[55]</span></span></a> Dotyczy
+    <div style="text-align: justify;"><sup>54</sup></div>
+    <div style="text-align: justify;"><sup>55</sup> Dotyczy
       projektów realizowanych w ramach partnerstwa.</div>
-    <div style="text-align: justify;"><a href="#_ftnref56" name="_ftn56"><span><span>[56]</span></span></a> Podlega
+    <div style="text-align: justify;"><sup>56</sup> Podlega
       uzupełnieniu dla danego konkursu.</div>
   </div>
