--- a/wzor_10_2.html
+++ b/wzor_10_2.html
@@ -273,9 +273,6 @@
       </ol>
 
 
-
-
-
       <!--!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! PARAGRAF 3 !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! -->
       <div style="text-align: center;">
         <div style="text-align: center;">§ 3.</div>
@@ -284,29 +281,45 @@
         <li>Beneficjent zobowiązuje się do osiągnięcia następujących wskaźników produktu na zakończenie realizacji
           projektu:</li>
       </ol>
-      <table style="text-align: justify; font-size: 12px; line-height: 1.5; font-family: Tahoma;">
+
+
+      <table style="text-align: justify; font-size: 12px; line-height: 1.5; font-family: Tahoma;margin-left: 30px">
         <tbody>
           <tr>
             <td width="10mm"></td>
-            <td width="8mm"><strong>{foreach $wskazniki_prod as $rekord} {$rekord@iteration})</strong></td>
-            <td width="160mm"><strong>{$rekord.nazwa_wsk_prod},wartość dolelowa:{foreach $wskazniki_prod as $rekord}
+            <td style="vertical-align: text-top; margin-top: 4px;" width="8mm"><strong>{foreach $wskazniki_prod as
+                $rekord}
+                {$rekord@iteration})</strong></td>
+            <td width="160mm"><strong>{$rekord.nazwa_wsk_prod},wartość dolelowa:{foreach
+                $wskazniki_prod as $rekord}
                 {$rekord.wsk_prod_docelowa}</strong></td>
           </tr>
         </tbody>
       </table>
+
+
       <ol start="2">
         <li>Beneficjent zobowiązuje się do osiągnięcia następujących wskaźników rezultatu:</li>
       </ol>
-      <table style="text-align: justify; font-size: 12px; line-height: 1.5; font-family: Tahoma;">
+
+
+      <table style="text-align: justify; font-size: 12px; line-height: 1.5; font-family: Tahoma;margin-left: 30px">
         <tbody>
           <tr>
             <td width="10mm"></td>
-            <td width="8mm"><strong>{foreach $wskazniki_rez as $rekord} {$rekord@iteration})</strong></td>
+            <td style="vertical-align: text-top;margin-top: 4px;" width="8mm"><strong>{foreach $wskazniki_rez as
+                $rekord}
+                {$rekord@iteration})</strong></td>
             <td width="160mm"><strong>{$rekord.nazwa_wsk_rez},wartość dolelowa:{foreach $wskazniki_rez as $rekord}
                 {$rekord.wsk_rez_docelowa}</strong></td>
           </tr>
         </tbody>
       </table>
+
+
+
+
+
       <ol start="3">
         <li>Beneficjent zobowiązuje się do monitorowania oraz przekazywania do IZ informacji zgodnie z obowiązującym
           wnioskiem o dofinansowanie o poziomie wskaźników horyzontalnych (1-4) i wskaźników informacyjnych służących do
@@ -341,28 +354,31 @@
         <div style="text-align: center;">§ 4.</div>
       </div>
       <ol>
-        <li>Beneficjent zobowiązuje się do realizacji projektu z należytą starannością, w szczególności ponosząc wydatki
-          celowo, rzetelnie, racjonalnie i oszczędnie z zachowaniem zasady uzyskiwania najlepszych efektów, zgodnie z
-          obowiązującymi regułami, zasadami i postanowieniami wynikającymi z programu, uszczegółowienia, obowiązujących
-          procedur, wytycznych oraz właściwych przepisów prawa krajowego oraz prawa unijnego.</li>
-        <li>Beneficjent oświadcza, że zapoznał się z treścią Wytycznych, o których mowa w § 1 pkt 22) oraz zapisami
-          SzOOP
-          i zobowiązuje się do realizacji projektu zgodnie z ich zapisami, w tym ze szczegółowymi obowiązkami
-          Beneficjenta
+        <li>1. Beneficjent zobowiązuje się do realizacji projektu z należytą starannością, w szczególności ponosząc
+          wydatki celowo,
+          rzetelnie, racjonalnie i oszczędnie z zachowaniem zasady uzyskiwania najlepszych efektów, zgodnie z
+          obowiązującymi
+          regułami, zasadami i postanowieniami wynikającymi z programu, uszczegółowienia, obowiązujących procedur,
+          wytycznych oraz
+          właściwych przepisów prawa krajowego oraz prawa unijnego.</li>
+        <li>2. Beneficjent oświadcza, że zapoznał się z treścią Wytycznych, o których mowa w § 1 pkt 22) oraz zapisami
+          SzOOP i
+          zobowiązuje się do realizacji projektu zgodnie z ich zapisami, w tym ze szczegółowymi obowiązkami Beneficjenta
           określonymi w załączniku nr 3 do Umowy.</li>
-        <li>IZ zobowiązuje się powiadomić Beneficjenta o wszelkich zmianach Wytycznych, o których mowa w § 1 pkt 22).
+        <li>3. IZ zobowiązuje się powiadomić Beneficjenta o wszelkich zmianach Wytycznych, o których mowa w § 1 pkt 22).
           Powiadomienie następuje poprzez publikację komunikatu na stronie internetowej IZ.</li>
-        <li>Przy wydatkowaniu środków przyznanych w ramach projektu Beneficjent zobowiązuje się stosować przepisy prawa
-          unijnego i krajowego oraz aktualną treść Wytycznych<sup>12</sup>, o których mowa w 1 pkt 22).</li>
-        <li>W przypadku, gdy ogłoszona po podpisaniu niniejszej Umowy wersja Wytycznych, o których mowa w § 1 pkt 22
-          lit.
-          e) wprowadza rozwiązania korzystniejsze dla Beneficjenta, to na pisemny wniosek Beneficjenta, w sytuacji
-          wydatków poniesionych przed dniem stosowania nowej wersji dokumentu, IZ może stosować zasady korzystniejsze
-          dla
-          Beneficjenta, o ile wydatki te nie zostały jeszcze zatwierdzone we wniosku o płatność.</li>
-        <li>Beneficjent oświadcza, iż projekt na dzień podpisania umowy spełnia wszystkie kryteria, na podstawie których
-          został wybrany do dofinansowania.</li>
-        <li><sup>13</sup> {$pole_12}</li>
+        <li>4. Przy wydatkowaniu środków przyznanych w ramach projektu Beneficjent zobowiązuje się stosować przepisy
+          prawa unijnego
+          i krajowego oraz aktualną treść Wytycznych , o których mowa w § 1 pkt 22).</li>
+        <li>5. W przypadku, gdy ogłoszona po podpisaniu niniejszej Umowy wersja Wytycznych, o których mowa w § 1 pkt 22
+          lit. e)
+          wprowadza rozwiązania korzystniejsze dla Beneficjenta, to na pisemny wniosek Beneficjenta, w sytuacji wydatków
+          poniesionych przed dniem obowiązywania nowej wersji Wytycznych, IZ może stosować zasady korzystniejsze dla
+          Beneficjenta,
+          o ile wydatki te nie zostały jeszcze zatwierdzone we wniosku o płatność.</li>
+        <li><sup>13</sup> Beneficjent oświadcza, iż projekt na dzień podpisania umowy spełnia wszystkie kryteria, na
+          podstawie których został wybrany do dofinansowania.</li>
+
       </ol>
     </div>
     <div style="text-align: justify; margin-bottom: 0;">
@@ -507,10 +523,8 @@
           zawartego w § 12 ust. 2.</li>
 
         <li>{if $realizatorzy.nazwa_realizatora==''}
-
           <span style="text-decoration: line-through;">
-            Projekt będzie realizowany przez: <sup>17</sup>
-          </span>
+            Projekt będzie realizowany przez:</span> <sup>17</sup>
 
           {else}
 
@@ -521,14 +535,31 @@
           {/if}
         </li>
 
+
         </li>
-        <li>Projekt będzie realizowany w partnerstwie z<strong> (nazwa partnera)</strong><sup>18</sup>
-          <ul>
-            <li><strong> <span>{foreach $partnerzy as $rekord} {$rekord.nazwa_partnera}{/foreach},</span> </strong>
-              <span>
-              </span></li>
-          </ul>
+
+
+
+        <li>
+
+          {if $dane_z_aktualnego_wnd.realiz_w_partner=='1'}
+          <span>Projekt będzie realizowany w partnerstwie z:</span><sup>18</sup>
+          <ol type="a">
+            <li><strong> {foreach $partnerzy as $rekord} {$rekord.nazwa_partnera}{/foreach},</strong>
+            </li>
+          </ol>
+
+          {else}
+
+          <span style="text-decoration: line-through;">Projekt będzie realizowany w partnerstwie z:</span><sup>18</sup>
+
+          {/if}
+
         </li>
+
+
+
+
         <li>Beneficjent oświadcza, iż porozumienie/umowa o partnerstwie spełnia minimalne wymogi formalne, o których
           mowa
           w art. 33 ust. 5 ustawy wdrożeniowej oraz partnerstwo zostało nawiązane zgodnie z art. 33 ustawy
